--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ input{
 input[type=text] {
    width: 100%;
    padding: 20px 275px;
+   text-align: center;
    margin: 8px 0;
    box-sizing: border-box;
    font-size: 40px;
